--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "dependencies": {
         "axios": "^1.1.3",
         "core-js": "^3.8.3",
+        "uuid": "^9.0.0",
         "vue": "^3.2.13",
         "vue-router": "^4.0.13",
         "vuex": "^4.0.0"
     },
     "devDependencies": {
+        "@volar-plugins/vetur": "latest",
         "@vue/cli-plugin-babel": "~5.0.0",
         "@vue/cli-plugin-router": "~5.0.0",
         "@vue/cli-plugin-vuex": "~5.0.0",
